--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 :root {
   --Violet: hsl(257, 40%, 49%);
@@ -27,7 +26,7 @@ body {
   width: 8rem;
 }
 .mockups {
-  width: 19.5rem;
+  width: 23rem;
   margin-top: 4rem;
 }
 /* just fonts */
@@ -68,12 +67,16 @@ button:hover {
   background-color: var(--Soft-Magenta);
   border: none;
 }
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
 i {
   border: 1px solid white;
   padding: 9px;
   border-radius: 50%;
   font-size: 1.5rem;
-  gap: 10px;
   margin-top: 5rem;
 }
 i:hover {
@@ -86,28 +89,30 @@ i:hover {
     background-image: url(bg-desktop.svg);
     background-size: contain;
   }
-  /* .card {
-    width: 50vw;
-  } */
+  .card {
+    width: 85vw;
+    gap: 5rem;
+  }
   .wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
-    margin-right: 20rem;
   }
   .txt {
     text-align: left;
     margin-top: 5rem;
-    width: 35rem;
+    width: 45rem;
   }
-  h1{
+  h1 {
     font-size: 3rem;
   }
   .mockups {
-    width: 30rem;
+    width: 50rem;
   }
   .socials {
-    float: right;
-    margin-top: 14rem;
+    margin-top: 6rem;
+    display: flex;
+    justify-content: flex-end;
   }
 }
